--- a/index.html
+++ b/index.html
@@ -1520,6 +1520,45 @@
             margin-bottom: 14px;
         }
 
+        .support-card form {
+            display: grid;
+            gap: 14px;
+        }
+
+        .support-card form .field-row {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 12px;
+        }
+
+        .support-card input,
+        .support-card textarea {
+            width: 100%;
+            border: none;
+            border-radius: 14px;
+            padding: 12px 14px;
+            font-size: 0.95rem;
+            background: rgba(255, 255, 255, 0.2);
+            color: var(--white);
+            box-shadow: inset 0 2px 6px rgba(9, 30, 15, 0.2);
+        }
+
+        .support-card input::placeholder,
+        .support-card textarea::placeholder {
+            color: rgba(255, 255, 255, 0.75);
+        }
+
+        .support-card input:focus,
+        .support-card textarea:focus {
+            outline: none;
+            box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.28);
+        }
+
+        .support-card textarea {
+            min-height: 120px;
+            resize: vertical;
+        }
+
         .support-card .btn {
             background: var(--white);
             color: var(--primary);
@@ -1530,6 +1569,26 @@
         .support-card .btn:hover {
             background: #f1f8e9;
             color: var(--primary-dark);
+        }
+
+        .support-card button[type="submit"] {
+            background: var(--secondary);
+            color: var(--white);
+            border: none;
+            border-radius: 999px;
+            padding: 12px 24px;
+            font-weight: 600;
+            text-transform: none;
+            letter-spacing: 0.5px;
+            cursor: pointer;
+            transition: var(--transition);
+            justify-self: flex-start;
+        }
+
+        .support-card button[type="submit"]:hover {
+            background: #f57c00;
+            transform: translateY(-2px);
+            box-shadow: var(--shadow);
         }
 
         /* Footer */
@@ -2141,7 +2200,19 @@
                 <div class="support-card">
                     <h3>Need a different time?</h3>
                     <p>Tell us what works for you and we'll release bespoke slots outside standard hours.</p>
-                    <a class="btn" href="mailto:hello@payasyoumow.co.uk?subject=Custom%20Garden%20Quote"><i class="fas fa-envelope-open-text" aria-hidden="true"></i>&nbsp; Email the team</a>
+                    <form id="contactForm" autocomplete="off">
+                        <div class="field-row">
+                            <input type="text" id="contactName" name="name" placeholder="Your name" required>
+                            <input type="tel" id="contactPhone" name="phone" placeholder="Phone number" required>
+                        </div>
+                        <input type="email" id="contactEmail" name="email" placeholder="Email address" required>
+                        <textarea id="contactEnquiry" name="enquiry" placeholder="How can we help?" required></textarea>
+                        <button type="submit">
+                            <i class="fas fa-paper-plane" aria-hidden="true"></i>
+                            Send enquiry
+                        </button>
+                    </form>
+                    <div class="booking-response" id="contactResponse" role="status" aria-live="polite"></div>
                 </div>
             </div>
         </div>
@@ -2461,6 +2532,9 @@
         const modalLocation = document.getElementById('modalLocation');
         const modalEmail = document.getElementById('modalEmail');
         const modalPhone = document.getElementById('modalPhone');
+        const contactForm = document.getElementById('contactForm');
+        const contactResponse = document.getElementById('contactResponse');
+        const contactSubmitButton = contactForm ? contactForm.querySelector('button[type="submit"]') : null;
 
         let lastFocusedElement = null;
 
@@ -2611,6 +2685,50 @@
                 modalSubmitText.textContent = 'Confirm booking';
             }
         });
+
+        if (contactForm) {
+            contactForm.addEventListener('submit', async (event) => {
+                event.preventDefault();
+
+                const payload = {
+                    name: document.getElementById('contactName').value.trim(),
+                    phone: document.getElementById('contactPhone').value.trim(),
+                    email: document.getElementById('contactEmail').value.trim(),
+                    enquiry: document.getElementById('contactEnquiry').value.trim()
+                };
+
+                contactResponse.classList.remove('visible', 'success', 'error');
+                contactResponse.textContent = '';
+
+                if (contactSubmitButton) {
+                    contactSubmitButton.disabled = true;
+                    contactSubmitButton.classList.add('loading');
+                }
+
+                try {
+                    const res = await fetch(`${API_BASE}/contact`, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(payload)
+                    });
+                    const data = await res.json();
+                    if (!res.ok) {
+                        throw new Error(data.message || '❌ Unable to send your enquiry.');
+                    }
+                    contactForm.reset();
+                    contactResponse.textContent = data.message || '✅ Thanks! We will be in touch soon.';
+                    contactResponse.classList.add('visible', 'success');
+                } catch (error) {
+                    contactResponse.textContent = error.message || '❌ Unable to send your enquiry. Please try again.';
+                    contactResponse.classList.add('visible', 'error');
+                } finally {
+                    if (contactSubmitButton) {
+                        contactSubmitButton.disabled = false;
+                        contactSubmitButton.classList.remove('loading');
+                    }
+                }
+            });
+        }
 
         // Load availability on page load
         loadAvailability();
